# CW_4

./: README.md  config.py  main.py  pyproject.toml
src/: api.py  saver.py  user_interaction.py  utils.py  vacancy.py
tests/: conftest.py  test__user_interaction.py
