[tool.poetry]
name = "cw-4"
version = "0.1.0"
description = ""
authors = ["Dmitry Zadorozhnyy <zadorozhnyy_d_m@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
